Closed Bug 1618453 Opened 4 years ago Closed 4 years ago

Recipient missing when using Reply to Sender and Group in Newsgroup discussions

Categories

(MailNews Core :: Composition, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 75.0

People

(Reporter: RainerBielefeldNG, Assigned: iannbugzilla)

Details

Attachments

(2 files, 2 obsolete files)

Steps how to reproduce with installation of unofficial (by wg9s) De SeaMonkey 2.53.2 beta 1 pre Mozilla/5.0 (NT 6.1; Win64; x64; rv:60.0) Gecko/20100101 Firefox/60.0 Build 20200222130008 (Default Classic Theme, newly created User Profile) on German WIN7 64bit:

  1. Open Email client / Newsgroup with discussion where you are involved
  2. In Thread Pane click a Posting of a different sender (not your own posting)
  3. In Menu Bar click 'Reply β†’ to Sender and Newsgroup'
    Bug: Recipient missing in "To" field πŸ˜₯
  1. Open Email client / Newsgroup with discussion where you are involved
  2. In Thread Pane click a Posting of your own
  3. In Menu Bar click 'Reply β†’ to Sender ownly'
    Bug: Recipient missing in "To" field πŸ˜₯
  4. In Menu Bar click 'Reply β†’ to Sender and Newsgroup'
    Bug: Recipient missing in "To" field πŸ˜₯
  5. In Menu Bar click 'Reply β†’ to all Recipients'
    Bug: Recipient missing in "To" field πŸ˜₯

Additional information:

a) has been found by Hartmut Figge on mozilla.support.seamonkey "SM-2.53.2 regarding reply addresses"

b) Hartmut reported for Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/2020021513 SeaMonkey/2.53.2-h Build 20200224130011

c) More information to SM version where problem appeared and so on coming soon

I tested with a profile created with 2.35.2 and Various WIN32 and WIN64 versions SM 2.49.5 and before Back until
WOW64; rv:19.0 Gecko/20100101 Firefox/19.0 SeaMonkey/2.16.2 Build identifier: 20130310201055
with server nntp.aioe.org (does not require authentication) with NG braunschweig.allgemeines.

With all Versions I reproduced (3) and (14), but none of the other ones.

Version: SeaMonkey 2.53 Branch → SeaMonkey 2.35 Branch

Alreay reproducible with 2.16.2 (WIN7)

Was still ok with Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0) Gecko/20120604 Firefox/13.0 SeaMonkey/2.10

We will have to check why I was only able to reproduce (3) and (14).Related to Profile, Newsserver, something else? I will do a test with mozilla.support.seamonkey later, may be we will have to split this one into 2 Bug Reports

Assignee: nobody → iann_bugzilla
Status: NEW → ASSIGNED

Moving to MailNews Core->Composition as it is a bug in nsMsgCompose.cpp
Looks like https://searchfox.org/comm-central/source/mailnews/compose/src/nsMsgCompose.cpp#2531 just needs fixing up to include nsIMsgCompType::ReplyToSenderAndGroup
Patching coming up

Component: MailNews: Composition → Composition
Product: SeaMonkey → MailNews Core
Hardware: Unspecified → All
Target Milestone: --- → Thunderbird 74.0
Version: SeaMonkey 2.35 Branch → Trunk

Fairly straight forward fix. I think my logic is sound, but I don't think TB has a Reply To Sender and Group button / context menu any more.

Attachment #9129957 - Flags: review?(mkmelin+mozilla)

(In reply to Rainer Bielefeld from comment #4)

We will have to check why I was only able to reproduce (3) and (14).Related to Profile, Newsserver, something else? I will do a test with mozilla.support.seamonkey later, may be we will have to split this one into 2 Bug Reports

This patch should fix (3) and (14). Any other issues, would have to be on a separate bug report once you have tested against a patched version.

Comment on attachment 9129957 [details] [diff] [review]
Add replyToSenderAndGroup to if statement for cc

># HG changeset patch
># User Ian Neal <iann_cvs@blueyonder.co.uk>
># Date 1582990786 0
># Parent  4ca5a41330ff98c4d610b53f38b9ac2268ef15be
>Bug 1618453 - Recipient missing in particular replies in Newsgroup discussions. r=mkmelin
>
>diff --git a/mailnews/compose/src/nsMsgCompose.cpp b/mailnews/compose/src/nsMsgCompose.cpp
>--- a/mailnews/compose/src/nsMsgCompose.cpp
>+++ b/mailnews/compose/src/nsMsgCompose.cpp
>@@ -2523,17 +2523,18 @@ QuotingOutputStreamListener::OnStopReque
>                 isReplyToSelf = false;
>                 break;
>               }
>             }
>             break;
>           }
>         }
>       }
>-      if (type == nsIMsgCompType::ReplyToSender ||
>+      if (type == nsIMsgCompType::ReplyToSenderAndGroup ||
>+          type == nsIMsgCompType::ReplyToSender ||
>           type == nsIMsgCompType::Reply) {
>         if (isReplyToSelf) {
>           // Cast to concrete class. We *only* what to change m_identity, not
>           // all the things compose->SetIdentity would do.
>           nsMsgCompose *_compose = static_cast<nsMsgCompose *>(compose.get());
>           _compose->m_identity = selfIdentity;
>           compFields->SetFrom(from);
>           compFields->SetTo(to);
Attachment #9129957 - Attachment is patch: true
Comment on attachment 9129957 [details] [diff] [review]
Add replyToSenderAndGroup to if statement for cc

Review of attachment 9129957 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM, r=mkmelin
Please update the commit message to describe the case you're fixing
Attachment #9129957 - Flags: review?(mkmelin+mozilla) → review+
Summary: Recipient missing in particular replies in Newsgroup discussions → Recipient missing when using Reply to Sender and Group in Newsgroup discussions
Attached patch Add replyToSenderAndGroup for cc (obsolete) β€” β€” Splinter Review

Fixed checkin comment, carrying for r+

Attachment #9129957 - Attachment is obsolete: true
Attachment #9131036 - Flags: review+

Sorry for the noise, missed a word out. r+ carried forward

Attachment #9131036 - Attachment is obsolete: true
Attachment #9131040 - Flags: review+
Comment on attachment 9131040 [details] [diff] [review]
Add missing reply type to if statement for cc

a+ for our SeaMonkey release branches in gitlab.
Attachment #9131040 - Flags: approval-comm-release+
Attachment #9131040 - Flags: approval-comm-esr60+
Attachment #9131043 - Flags: review+
Attachment #9131043 - Flags: review+
Comment on attachment 9131040 [details] [diff] [review]
Add missing reply type to if statement for cc

Let's not confuse things whilst cc checkin is pending
Attachment #9131040 - Flags: approval-comm-release+
Attachment #9131040 - Flags: approval-comm-esr60+
Target Milestone: Thunderbird 74.0 → Thunderbird 75.0

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/e590395bc361
Recipient missing when using Reply to Sender and Group in Newsgroup discussions. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Comment on attachment 9131043 [details] [diff] [review]
Add replyToSenderAndGroup for SM repos

a+ for SeaMonkey gitlab release branches only. Not for checkin into comm-release and comm-esr60.
Attachment #9131043 - Flags: approval-comm-release+
Attachment #9131043 - Flags: approval-comm-esr60+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: