Bug 1618453 - Recipient missing when using Reply to Sender and Group in Newsgroup discussions. r=mkmelin